Update : Fixed Start Page

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
 </head>
 <body>
-    <main>
-        <section class="heading"><h1 class="text-center"> ROCK PAPER SCISSORS</h1></section>
+    <main class="main-section">
+        <section class="heading"><h1 class="text-center display-2"> ROCK PAPER SCISSORS</h1></section>
         <section class="main-game-initial">
             <div class="container">
                 <div class="row player-box">
@@ -50,8 +50,11 @@
                 </div>
             </div>
         </section>
-        <section class="game-on text-center">
-            <button class="btn btn-outline-secondary play-btn">Play</button>
+        <section class="game-on text-center play-btn">
+            <i class="fa-regular fa-hand-back-fist fa-2xl p-3"></i>
+            <i class="fa-regular fa-hand fa-2xl p-3"></i>
+            <i class="fa-regular fa-hand-scissors fa-2xl p-3"></i> <br>
+            <button class="btn btn-success play-btn mt-3 btn-l">Play Game</button>
         </section>
     </main>
 
