Update : minor text revision

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <h2>vs</h2>
                     </div>
                     <div class="col-12 col-md-5 user-side-el">
-                        <p class="user-score-el"><span class="user-name-el">User</span> : <span class="user-score-count">0</span></p>
+                        <p class="user-score-el"><span class="user-name-el">Player</span> : <span class="user-score-count">0</span></p>
                         <p class="user-choice">
                             <i class="user-hand fa-regular fa-user"></i>
                         </p>
